Fixed overlap between map and table in home page. Corrected wording for CPI Level chart.

--- a/app/static/css/maps.css
+++ b/app/static/css/maps.css
@@ -1,6 +1,6 @@
 #map,
 html {
-  height: 100%;
+  height: 90%;
 }
 
 .map-container {
